# UsadaYu

./: .gitignore  README.md  clean.sh  init.sh
Assembly/: 001_introductory.s  002_aboutARM.s  003_helloWorld.s  make.sh
C/: clean.sh
C/Basic/0001_standard/010_thread/: Makefile  thread.c
C/Basic/0001_standard/020_time/: Makefile  time.c
C/Basic/0001_standard/030_memcpy_memmove/: cpy_move.c  make.sh
C/Basic/0020_macro_definition/010_container_of/: containerOfSample.c
C/Basic/0020_macro_definition/020_string_handle/: Makefile  define.c
C/Knowledge/: clean.sh
C/Knowledge/TypeSize/: typeSize.c
C/Knowledge/cLibrary/thread/: thread.c
C/Knowledge/include/: common.h
C/Knowledge/macroDefinition/: define.c
C/Knowledge/macroDefinition/containerOf/: Makefile  containerOf.h  containerOfAnalyse.c
C/Knowledge/thread/: Makefile  thread.c
C/Knowledge/time/: Makefile  time.c
C/Resp/include/: os_c_include.h  os_common.h  os_def.h  os_info.h  os_infoPrint.h  os_standard.h  os_structHandle.h
C/user_alg/: .gitignore  CMakeLists.txt  alg_init.sh  clean.sh
C/user_alg/include/internal/: alg_base_define.h  alg_region_judge.h
C/user_alg/src/: alg_region_judge.c
C/user_os/: CMakeLists.txt
C/user_os/include/: os_c_include.h  os_common.h  os_info.h  os_math.h  os_memory.h  os_standard.h
C/user_os/src/: os_info.c  os_math.c
Essay/: readme.md  蝶恋花·春景.md
Python/: clean.sh
Python/common/self-fileModule/: setup.py
Python/common/self-fileModule/fileModule/: fileModule.py
Python/encode_utf8/: encode_utf8.py  pack.sh  readme.md
Python/file_Base64/: file_Base64.py  pack.sh  readme.md
Python/log_process/: log_process.py
ToolKnowledge/Cmake/001_HelloWorld/: CMakeLists.txt
ToolKnowledge/Cmake/002_cmakeSample/: CMakeLists.txt
ToolKnowledge/Cmake/003_Library/: CMakeLists.txt
ToolKnowledge/Gcov/: Makefile
ToolKnowledge/Gcov/src/: main.c
ToolKnowledge/Jemalloc/: .gitignore  Makefile
ToolKnowledge/Jemalloc/include/: common.h
ToolKnowledge/Jemalloc/script/: heapResMerge.py  jeHeapToTxt.sh
ToolKnowledge/Jemalloc/src/common/: memAlloc.c
ToolKnowledge/Jemalloc/src/proCtnu/: proCtnu.c
ToolKnowledge/Jemalloc/src/proStop/: proStop.c
tool_install/gcc-14.2.0/: readme.md
